--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-server": "^16.1.0",
     "@angular/router": "^16.1.0",
     "@fortawesome/fontawesome-free": "^6.4.0",
+    "@kolkov/angular-editor": "^3.0.0-beta.0",
     "bootstrap": "^5.3.0",
     "jquery": "^3.6.3",
     "oidc-client": "^1.11.5",
