--- a/mrg-game-news.csproj
+++ b/mrg-game-news.csproj
@@ -14,8 +14,6 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.SpaProxy" Version="7.0.5" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.8" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Abstractions" Version="7.0.8" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="7.0.8" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.8" />
   </ItemGroup>
 
@@ -28,6 +26,10 @@
 
   <ItemGroup>
     <Folder Include="ClientApp\src\app\shared\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\MrgGameNewsBack\MrgGameNewsBack.csproj" />
   </ItemGroup>
 
     <Target Name="DebugEnsureNodeEnv" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('$(SpaRoot)node_modules') ">
