--- a/mrg-game-news.csproj
+++ b/mrg-game-news.csproj
@@ -29,7 +29,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\MrgGameNewsBack\MrgGameNewsBack.csproj" />
+    <ProjectReference Include="MrgGameNewsBack\MrgGameNewsBack.csproj" />
   </ItemGroup>
 
     <Target Name="DebugEnsureNodeEnv" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('$(SpaRoot)node_modules') ">
